--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,9 +7,21 @@ readme = "README.md"
 
 requires-python = ">= 3.12"
 dependencies = [
+    "beautifulsoup4>=4.13.4",
+    "en-core-web-sm",
+    "google-cloud-storage<3.0",
+    "google-genai>=1.25.0",
+    "html2text>=2025.4.15",
+    "litellm>=1.74.3",
+    "openai>=1.96.1",
+    "pandas>=2.3.1",
     "python-dotenv >= 1.0.1",
     "pyyaml>=6.0.2",
+    "rank-bm25>=0.2.2",
+    "spacy>=3.8.7",
+    "tenacity>=8.5.0",
 ]
+
 [tool.setuptools]
 packages = ["sec_doc_tool"]
 
@@ -28,10 +40,14 @@ dev = [
     "pre-commit >= 4.0.1",
     "ruff >= 0.12.3",
     "pyright >= 1.1.403",
+    "pandas-stubs>=2.3.0.250703",
 ]
 
 [tool.uv]
 managed = true
+
+[tool.uv.sources]
+en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
 
 [tool.pytest.ini_options]
 minversion = "6.0"
@@ -72,4 +88,4 @@ select = [
     "I",
     "A",
 ] # Enable checks for PEP8, imports, and other standard rules
-ignore = ["E203", "E266"]
+ignore = ["E203", "E266", "E501"]
