--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,8 @@ testpaths = ["tests"]
 pythonpath = ["."]
 filterwarnings = [
     "ignore::DeprecationWarning",
-]
+    "ignore::UserWarning:pydantic.main",
+ ]
 env_files = [".env"]
 asyncio_mode = "auto"
 asyncio_default_fixture_loop_scope = "function"
