--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -1,7 +1,8 @@
 {
     "exclude": [
         ".venv/",
-        "build/"
+        "build/",
+        "tmp/"
     ],
     "include": [
         "*.py",
