--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sec_doc_tool"
-version = "0.2.0"
+version = "0.2.1"
 description = "SEC document toolkit"
 authors = [{ name = "Li Lin", email = "guru.lin@gmail.com" }]
 readme = "README.md"
@@ -10,7 +10,7 @@ dependencies = [
     "beautifulsoup4>=4.13.4",
     "google-cloud-storage<3.0",
     "html2text>=2025.4.15",
-    "pandas>=2.3.1",
+    "polars>=1.0.0",
     "python-dotenv >= 1.0.1",
     "pyyaml>=6.0.2",
     "spacy>=3.8.7",
@@ -43,7 +43,6 @@ dev = [
     "pre-commit >= 4.0.1",
     "ruff >= 0.12.3",
     "pyright >= 1.1.403",
-    "pandas-stubs>=2.3.0.250703",
     "en-core-web-sm",
 ]
 
